WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57999
clearIfComposited call is really slow
https://bugs.webkit.org/show_bug.cgi?id=57999
Summary
clearIfComposited call is really slow
John Bauman
Reported
2011-04-06 16:58:55 PDT
clearIfComposited call is really slow
Attachments
Patch
(1.68 KB, patch)
2011-04-06 17:04 PDT
,
John Bauman
no flags
Details
Formatted Diff
Diff
Fix patch
(1.67 KB, patch)
2011-04-07 13:35 PDT
,
John Bauman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
John Bauman
Comment 1
2011-04-06 17:04:03 PDT
Created
attachment 88544
[details]
Patch
Kenneth Russell
Comment 2
2011-04-06 19:02:13 PDT
Comment on
attachment 88544
[details]
Patch Looks good.
WebKit Commit Bot
Comment 3
2011-04-06 20:57:32 PDT
Comment on
attachment 88544
[details]
Patch Rejecting
attachment 88544
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-7', 'land-a..." exit_code: 2 Last 500 characters of output: LayoutTestControllerQt.cpp M Tools/DumpRenderTree/qt/DumpRenderTreeQt.cpp M Tools/ChangeLog
r83137
= 7f2c250c078454d645915dace97b96aef2626877 (refs/remotes/trunk) M Tools/DumpRenderTree/mac/DumpRenderTree.mm M Tools/DumpRenderTree/LayoutTestController.cpp M Tools/DumpRenderTree/LayoutTestController.h M Tools/ChangeLog
r83138
= 8fef0c2b86f5af6c92684d29e9b2e11bf6f5822f (refs/remotes/trunk) First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/trunk. Full output:
http://queues.webkit.org/results/8348429
Kenneth Russell
Comment 4
2011-04-07 13:18:13 PDT
You need to take out the "No new tests. OOPS!" line from your ChangeLog. Could you upload a new patch?
John Bauman
Comment 5
2011-04-07 13:35:28 PDT
Created
attachment 88684
[details]
Fix patch
Kenneth Russell
Comment 6
2011-04-07 13:42:43 PDT
Comment on
attachment 88684
[details]
Fix patch Looks good.
WebKit Commit Bot
Comment 7
2011-04-07 20:09:35 PDT
Comment on
attachment 88684
[details]
Fix patch Clearing flags on attachment: 88684 Committed
r83242
: <
http://trac.webkit.org/changeset/83242
>
WebKit Commit Bot
Comment 8
2011-04-07 20:09:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug